--- a/index.html
+++ b/index.html
@@ -259,6 +259,189 @@
           </div>
         </div>
       </section>
+
+      <!-- works -->
+      <section class="work">
+        <div class="container">
+          <h2 class="section-heading">How it works</h2>
+          <p class="section-desc work__desc">
+            Exceptional dental care for all ages. Your great smile begins with a
+            great dentist.
+          </p>
+          <div class="work__list">
+            <!-- work item 1 -->
+            <section class="work-item">
+              <img
+                src="./assets/img/search.svg"
+                alt="Search doctor"
+                class="work-item__icon"
+              />
+              <h3 class="work-item__heading">Search doctor</h3>
+              <p class="work-item__desc">
+                Search a doctor by education, qualifications or
+                experience-contact for inquiry.
+              </p>
+              <a href="#!" class="work-item__more">Learn More</a>
+            </section>
+            <!-- work item 2  -->
+            <section class="work-item">
+              <img
+                src="./assets/img/find-user.svg"
+                alt="Find best doctor"
+                class="work-item__icon"
+              />
+              <h3 class="work-item__heading">Find best doctor</h3>
+              <p class="work-item__desc">
+                Search a doctor by education, qualifications or
+                experience-contact for inquiry.
+              </p>
+              <a href="#!" class="work-item__more">Learn More</a>
+            </section>
+            <!-- work item 3 -->
+            <section class="work-item">
+              <img
+                src="./assets/img/aid-kit.svg"
+                alt="Get treatment"
+                class="work-item__icon"
+              />
+              <h3 class="work-item__heading">Get treatment</h3>
+              <p class="work-item__desc">
+                Search a doctor by education, qualifications or
+                experience-contact for inquiry.
+              </p>
+              <a href="#!" class="work-item__more">Learn More</a>
+            </section>
+          </div>
+        </div>
+      </section>
+      <!-- about -->
+      <section class="about">
+        <div class="container">
+          <div class="about-row">
+            <!-- about left -->
+            <div class="about__media">
+              <figure class="about__img">
+                <img
+                  src="./assets/img/about1.png"
+                  alt=""
+                  class="about__img--big"
+                />
+                <img
+                  src="./assets/img/about2.png"
+                  alt=""
+                  class="about__img--small"
+                />
+              </figure>
+            </div>
+            <!-- about right -->
+            <section class="about-content">
+              <h2 class="section-heading">Take back your smile with shine.</h2>
+              <p class="section-desc">
+                If you’re missing multiple teeth due to decay, injury, or the
+                natural aging process, dentures might be the perfect solution.
+              </p>
+              <a href="#!" class="btn about-content__btn">Learn More</a>
+            </section>
+          </div>
+        </div>
+      </section>
+      <section class="team">
+        <div class="container">
+          <div class="team-header">
+            <h2 class="section-heading">Our virtual dentist</h2>
+            <a href="#!" class="btn team__cta">Meet our dentist</a>
+          </div>
+          <div class="team__list">
+            <!-- item 1 -->
+            <article class="team-item">
+              <div class="team-item__img-bg">
+                <img
+                  src="./assets/img/team1.png"
+                  alt="Dr. Essence Page"
+                  class="team-item__thumb"
+                />
+              </div>
+              <h3 class="team-item__name">Dr. Essence Page</h3>
+              <p class="team-item__desc">DDS, California - Linda University</p>
+            </article>
+
+            <!-- item 2 -->
+            <article class="team-item">
+              <div class="team-item__img-bg">
+                <img
+                  src="./assets/img/team2.png"
+                  alt="Dr. Essence Page"
+                  class="team-item__thumb"
+                />
+              </div>
+              <h3 class="team-item__name">Dr. Essence Page</h3>
+              <p class="team-item__desc">DDS, California - Linda University</p>
+            </article>
+            <!-- item 3 -->
+            <article class="team-item">
+              <div class="team-item__img-bg">
+                <img
+                  src="./assets/img/team3.png"
+                  alt="Dr. Essence Page"
+                  class="team-item__thumb"
+                />
+              </div>
+              <h3 class="team-item__name">Dr. Essence Page</h3>
+              <p class="team-item__desc">DDS, California - Linda University</p>
+            </article>
+            <!-- item 4 -->
+            <article class="team-item">
+              <div class="team-item__img-bg">
+                <img
+                  src="./assets/img/team4.png"
+                  alt="Dr. Essence Page"
+                  class="team-item__thumb"
+                />
+              </div>
+              <h3 class="team-item__name">Dr. Essence Page</h3>
+              <p class="team-item__desc">DDS, California - Linda University</p>
+            </article>
+          </div>
+          
+          <!-- btn control -->
+          <div class="control team__control">
+            <button class="control__btn">
+              <svg
+                class="control-icon"
+                xmlns="http://www.w3.org/2000/svg"
+                width="6"
+                height="12"
+                viewBox="0 0 6 12"
+                fill="none"
+              >
+                <path
+                  d="M5.5 1L0.5 6L5.5 11"
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </button>
+            <button class="control__btn">
+              <svg
+                class="control-icon control-icon--next"
+                xmlns="http://www.w3.org/2000/svg"
+                width="6"
+                height="12"
+                viewBox="0 0 6 12"
+                fill="none"
+              >
+                <path
+                  d="M5.5 1L0.5 6L5.5 11"
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </button>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
