build cta mobile

--- a/index.html
+++ b/index.html
@@ -156,7 +156,6 @@
         </section>
       </div>
     </header>
-
     <!-- main -->
     <main>
       <!-- service -->
@@ -259,7 +258,6 @@
           </div>
         </div>
       </section>
-
       <!-- works -->
       <section class="work">
         <div class="container">
@@ -345,6 +343,7 @@
           </div>
         </div>
       </section>
+      <!-- our team -->
       <section class="team">
         <div class="container">
           <div class="team-header">
@@ -402,7 +401,7 @@
               <p class="team-item__desc">DDS, California - Linda University</p>
             </article>
           </div>
-          
+
           <!-- btn control -->
           <div class="control team__control">
             <button class="control__btn">
@@ -439,6 +438,35 @@
                 />
               </svg>
             </button>
+          </div>
+        </div>
+      </section>
+      <!-- CTA -->
+      <section class="install">
+        <div class="container">
+          <div class="install__inner">
+            <!-- left install -->
+            <figure>
+              <img src="./assets/img/cta-img.png" alt="" class="install__img" />
+            </figure>
+            <!-- right install -->
+            <section class="install__content">
+              <h2 class="section-heading install__heading">
+                Take back your smile with dentures
+              </h2>
+              <p class="install__desc">
+                If you’re missing multiple teeth due to decay, injury, or the
+                natural aging process, dentures might be the perfect solution.
+              </p>
+              <div class="install__row">
+                <a href="#!">
+                  <img src="./assets/img/googleplay.svg" alt="" class="install__btn-img" />
+                </a>
+                <a href="#!">
+                  <img src="./assets/img/Appstore.svg " alt="" class="install__btn-img" />
+                </a>
+              </div>
+            </section>
           </div>
         </div>
       </section>
