--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Sora:wght@100..800&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <!-- reset css -->
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
@@ -460,13 +463,97 @@
               </p>
               <div class="install__row">
                 <a href="#!">
-                  <img src="./assets/img/googleplay.svg" alt="" class="install__btn-img" />
+                  <img
+                    src="./assets/img/googleplay.svg"
+                    alt=""
+                    class="install__btn-img"
+                  />
                 </a>
                 <a href="#!">
-                  <img src="./assets/img/Appstore.svg " alt="" class="install__btn-img" />
+                  <img
+                    src="./assets/img/Appstore.svg "
+                    alt=""
+                    class="install__btn-img"
+                  />
                 </a>
               </div>
             </section>
+          </div>
+        </div>
+      </section>
+      <section class="blog">
+        <div class="container">
+          <div class="blog__inner">
+            <!-- left blog -->
+            <section class="blog__content">
+              <h2 class="section-heading blog__heading">Read Latest News & Events.</h2>
+              <a href="#!" class="blog__more">Read All Blog</a>
+              <div class="control blog__control">
+                <button class="control__btn">
+                  <svg
+                    class="control-icon"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="6"
+                    height="12"
+                    viewBox="0 0 6 12"
+                    fill="none"
+                  >
+                    <path
+                      d="M5.5 1L0.5 6L5.5 11"
+                      stroke="currentColor"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </button>
+                <button class="control__btn">
+                  <svg
+                    class="control-icon control-icon--next"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="6"
+                    height="12"
+                    viewBox="0 0 6 12"
+                    fill="none"
+                  >
+                    <path
+                      d="M5.5 1L0.5 6L5.5 11"
+                      stroke="currentColor"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </button>
+              </div>
+            </section>
+            <!-- right blog -->
+             <div class="blog__list">
+              <!-- item 1 -->
+               <article class="blog-item">
+                <figure class="blog-item__wrap">
+                  <img src="./assets/img/item1.png" alt="Key Considerations for Regulatory Compliant." class="blog-item__thumb">
+                </figure>
+                <section class="blog-item__body">
+                  <h3>
+                    <a href="#!" class="blog-item__heading">Key Considerations for Regulatory Compliant.</a>
+                    <p class="blog-item__desc">It’s easy to think about medical care from a narrow perspective. You go to the hospital.</p>
+                    <a href="#!" class="blog-item__more">Learn More</a>
+                  </h3>
+                </section>
+               </article>
+               <!-- item 2 -->
+               <article class="blog-item">
+                <figure class="blog-item__wrap">
+                  <img src="./assets/img/item2.png" alt="What Is Population Health Management?" class="blog-item__thumb">
+                </figure>
+                <section class="blog-item__body">
+                  <h3>
+                    <a href="#!" class="blog-item__heading">What Is Population Health Management?</a>
+                    <p class="blog-item__desc">It’s easy to think about medical care from a narrow perspective. You go to the hospital.</p>
+                    <a href="#!" class="blog-item__more">Learn More</a>
+                  </h3>
+                </section>
+               </article>
+             </div>
           </div>
         </div>
       </section>
