--- a/index.html
+++ b/index.html
@@ -87,9 +87,12 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Sora:wght@100..800&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
     <!-- reset css -->
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
@@ -444,7 +447,7 @@
           </div>
         </div>
       </section>
-      <!-- CTA -->
+      <!-- install mobile -->
       <section class="install">
         <div class="container">
           <div class="install__inner">
@@ -486,7 +489,9 @@
           <div class="blog__inner">
             <!-- left blog -->
             <section class="blog__content">
-              <h2 class="section-heading blog__heading">Read Latest News & Events.</h2>
+              <h2 class="section-heading blog__heading">
+                Read Latest News & Events.
+              </h2>
               <a href="#!" class="blog__more">Read All Blog</a>
               <div class="control blog__control">
                 <button class="control__btn">
@@ -526,34 +531,67 @@
               </div>
             </section>
             <!-- right blog -->
-             <div class="blog__list">
+            <div class="blog__list">
               <!-- item 1 -->
-               <article class="blog-item">
+              <article class="blog-item">
                 <figure class="blog-item__wrap">
-                  <img src="./assets/img/item1.png" alt="Key Considerations for Regulatory Compliant." class="blog-item__thumb">
+                  <img
+                    src="./assets/img/item1.png"
+                    alt="Key Considerations for Regulatory Compliant."
+                    class="blog-item__thumb"
+                  />
                 </figure>
                 <section class="blog-item__body">
                   <h3>
-                    <a href="#!" class="blog-item__heading">Key Considerations for Regulatory Compliant.</a>
-                    <p class="blog-item__desc">It’s easy to think about medical care from a narrow perspective. You go to the hospital.</p>
+                    <a href="#!" class="blog-item__heading"
+                      >Key Considerations for Regulatory Compliant.</a
+                    >
+                    <p class="blog-item__desc">
+                      It’s easy to think about medical care from a narrow
+                      perspective. You go to the hospital.
+                    </p>
                     <a href="#!" class="blog-item__more">Learn More</a>
                   </h3>
                 </section>
-               </article>
-               <!-- item 2 -->
-               <article class="blog-item">
+              </article>
+              <!-- item 2 -->
+              <article class="blog-item">
                 <figure class="blog-item__wrap">
-                  <img src="./assets/img/item2.png" alt="What Is Population Health Management?" class="blog-item__thumb">
+                  <img
+                    src="./assets/img/item2.png"
+                    alt="What Is Population Health Management?"
+                    class="blog-item__thumb"
+                  />
                 </figure>
                 <section class="blog-item__body">
                   <h3>
-                    <a href="#!" class="blog-item__heading">What Is Population Health Management?</a>
-                    <p class="blog-item__desc">It’s easy to think about medical care from a narrow perspective. You go to the hospital.</p>
+                    <a href="#!" class="blog-item__heading"
+                      >What Is Population Health Management?</a
+                    >
+                    <p class="blog-item__desc">
+                      It’s easy to think about medical care from a narrow
+                      perspective. You go to the hospital.
+                    </p>
                     <a href="#!" class="blog-item__more">Learn More</a>
                   </h3>
                 </section>
-               </article>
-             </div>
+              </article>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- appointment -->
+      <section class="appointment">
+        <div class="container">
+          <div class="appointment__inner">
+            <h2 class="section-heading appointment__heading">
+              Always welcoming new patients
+            </h2>
+            <p class="section-desc appointment__desc">
+              Take control of your dental health and get the personalized care
+              you deserve. Call (541) 772-8846 to schedule
+            </p>
+            <a href="#!" class="btn appointment__btn">Appointment</a>
           </div>
         </div>
       </section>
