--- a/index.html
+++ b/index.html
@@ -98,7 +98,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <!-- reset css -->
     <link rel="stylesheet" href="./assets/css/reset.css" />
+    <!-- style css -->
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <!-- responsive css -->
+     <link rel="stylesheet" href="./assets/css/responsive.css">
     <title>Shine smile</title>
   </head>
   <body>
@@ -108,11 +111,11 @@
         <div class="header-top">
           <!-- logo -->
           <a href="#!"
-            ><img src="./assets/img/logo.svg" alt="shine smile" class="logo"
+            ><img src="./assets/img/logo.svg" alt="shine smile" class="logo header__logo"
           /></a>
           <!-- nav -->
           <nav class="navbar">
-            <ul class="navbar__list">
+            <ul class="navbar__list" id="navbar__list--pc">
               <li class="navbar__item">
                 <a href="" class="navbar__link navbar__link--active">Home</a>
               </li>
@@ -165,6 +168,41 @@
         </section>
       </div>
     </header>
+    <!-- tablet/mobile header -->
+     <div class="mobile-header">
+      <!-- tablet/mobile menu -->
+       <input type="checkbox" name="menu-checkbox" id="menu-checkbox" class="menu-checkbox" hidden>
+      <label for="menu-checkbox">
+        <svg class="menu-header__icon" xmlns="http://www.w3.org/2000/svg" height = "30" width="30"
+         viewBox="0 0 448 512"><path fill="currentColor" d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 
+          32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"/></svg>
+      </label>
+      <!-- overlay -->
+       <label for="menu-checkbox" class="menu-overlay"></label>
+       <!-- menu content -->
+        <div class="menu-drawer">
+          <!-- top menu -->
+           <div class="menu-drawer__top">
+            <!-- logo -->
+            <a href="#!"
+            ><img src="./assets/img/logo.svg" alt="shine smile" class="logo"
+          /></a>
+          <!-- icon close menu -->
+<label for="menu-checkbox">
+            <svg class="close__menu" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path fill="currenColor" d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/></svg>
+</label>
+           </div>
+          <!-- mobile nav -->
+          <ul id="navbar__list--mobile"></ul>
+          <!-- sử dụng js để copy navbar  -->
+           <script>
+            const navPc = document.querySelector("#navbar__list--pc");
+            const navMobile = document.querySelector("#navbar__list--mobile");
+            // sao chép
+            navMobile.innerHTML = navPc.innerHTML;
+           </script>
+        </div>
+     </div>
     <!-- main -->
     <main>
       <!-- service -->
