--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
         <!-- top footer -->
         <div class="footer__top">
           <!-- column 1 -->
-          <div class="footer__column">
+          <div class="footer__column footer-hidden-tablet">
             <!-- logo -->
             <a href="#!"
               ><img
